# numerics

./: .README.md.swp  .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  index.html
.github/workflows/: ci.yml  docs.yml
api/: adi_8hpp.html  adi_8hpp.js  adi_8hpp_source.html  algorithms_8hpp.html  algorithms_8hpp.js  algorithms_8hpp_source.html  analysis_2types_8hpp.html  analysis_2types_8hpp.js  analysis_2types_8hpp_source.html  analysis_8hpp.html  analysis_8hpp_source.html  analysis_8md.html  annotated.html  annotated_dup.js  apps_2fluid__sim_2backends_2omp_2impl_8hpp.html  apps_2fluid__sim_2backends_2omp_2impl_8hpp.js  apps_2fluid__sim_2backends_2omp_2impl_8hpp_source.html  apps_2fluid__sim_2backends_2seq_2impl_8hpp.html  apps_2fluid__sim_2backends_2seq_2impl_8hpp.js  apps_2fluid__sim_2backends_2seq_2impl_8hpp_source.html  apps_2fluid__sim__3d_2backends_2omp_2impl_8hpp.html  apps_2fluid__sim__3d_2backends_2omp_2impl_8hpp.js  apps_2fluid__sim__3d_2backends_2omp_2impl_8hpp_source.html  apps_2fluid__sim__3d_2backends_2seq_2impl_8hpp.html  apps_2fluid__sim__3d_2backends_2seq_2impl_8hpp.js  apps_2fluid__sim__3d_2backends_2seq_2impl_8hpp_source.html  array_8cpp.html  array_8cpp.js  array_8cpp_source.html  array_8hpp.html  array_8hpp.js  array_8hpp_source.html  backends_2blas_2matrix_8cpp.html  backends_2blas_2matrix_8cpp.js  backends_2blas_2matrix_8cpp_source.html  backends_2blas_2vector_8cpp.html  backends_2blas_2vector_8cpp.js  backends_2blas_2vector_8cpp_source.html  backends_2gpu_2matrix_8cpp.html  backends_2gpu_2matrix_8cpp.js  (+1465 more)
api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  (+162 more)
apps/common/: colormap.hpp  pixel_canvas.hpp  sim_app.hpp
apps/em_demo/: CMakeLists.txt  README.md  main.cpp
apps/em_demo/include/em_demo/: sim.hpp
apps/em_demo/src/: sim.cpp
apps/fluid_sim/: CMakeLists.txt  README.md  fluid.cpp  fluid.hpp  heat.cpp  heat.hpp  main.cpp  particle.hpp  rigid_body.hpp  spatial_hash.cpp  spatial_hash.hpp
apps/fluid_sim/backends/omp/: fluid.cpp  heat.cpp  impl.hpp
apps/fluid_sim/backends/seq/: fluid.cpp  heat.cpp  impl.hpp
apps/fluid_sim/include/fluid_sim/: sim.hpp
apps/fluid_sim/src/: fluid.cpp  heat.cpp
apps/fluid_sim_3d/: CMakeLists.txt  README.md  fluid3d.cpp  fluid3d.hpp  heat3d.hpp  main.cpp  particle3d.hpp  rigid_body3d.hpp  spatial_hash3d.hpp
apps/fluid_sim_3d/backends/omp/: fluid.cpp  heat.cpp  impl.hpp
apps/fluid_sim_3d/backends/seq/: fluid.cpp  heat.cpp  impl.hpp
apps/fluid_sim_3d/include/fluid_sim_3d/: sim.hpp
apps/fluid_sim_3d/src/: sim.cpp
apps/ising/: CMakeLists.txt  README.md  main.cpp
apps/ising/include/ising/: sim.hpp
apps/ising_nucleation/: CMakeLists.txt  main.cpp
apps/nbody/: CMakeLists.txt  README.md  main.cpp
apps/nbody/include/nbody/: sim.hpp
apps/nbody/src/: sim.cpp
apps/ns_demo/: CMakeLists.txt  README.md  main.cpp
apps/ns_demo/include/ns_demo/: sim.hpp
apps/ns_demo/src/: sim.cpp
apps/quantum_demo/: CMakeLists.txt  README.md  main.cpp
apps/quantum_demo/include/quantum/: circuit.hpp  quantum.hpp  statevector.hpp
apps/quantum_demo/src/quantum/: circuit.cpp  statevector.cpp
apps/tdse/: CMakeLists.txt  README.md  main.cpp
apps/tdse/include/tdse/: sim.hpp
apps/tdse/src/: sim.cpp
benchmarks/: CMakeLists.txt  README.md  bench_autovec.cpp  bench_banded.cpp  bench_eigen.cpp  bench_factorization.cpp  bench_fft.cpp  bench_kernel.cpp  bench_linalg.cpp  bench_memory.cpp  bench_memory.hpp  bench_plot.hpp  bench_svd.cpp  main.cpp
cmake/: FindFFTW3.cmake  NumericsConfig.cmake.in  apple.cmake  blas.cmake  cuda.cmake  dependencies.cmake  fftw.cmake  install.cmake  mpi.cmake  openmp.cmake  options.cmake  physics.cmake  sanitize.cmake  simd.cmake  sources.cmake  stdsimd.cmake
cmake/report/: CMakeLists.txt  build_info.json.in  gen_report.cpp  run_tests.cmake  template.md
docs/: CMakeLists.txt  Doxyfile.in  index.html  kanagawa-dragon.css  ucsb.css
docs/pages/: analysis.md  boltzmann-table.md  conjugate-gradient.md  connected-components.md  eigenvalue-jacobi.md  eigenvalue-power.md  eigenvalues.md  factorizations.md  fft.md  fields.md  gmres.md  heat_demo.md  index.md  lanczos.md  linear-solvers.md  lu-factorization.md  ns-perf.md  ode.md  parallel.md  pbc-lattice.md  pde.md  performance.md  poisson.md  qr-factorization.md  quadrature.md  root-finding.md  sph-kernel.md  stationary-iterative.md  stencil-hof.md  svd-onesided-jacobi.md  svd-randomized.md  svd.md  week1-fundamentals.md  week2-mpi.md  week3-cuda.md  week4-solvers.md  week5-banded.md  week6-cache-blocking.md  week7-register-blocking.md  week8-simd.md  (+1 more)
docs/report/: REPORT.md  index.html
examples/: CMakeLists.txt  fft_demo.cpp  heat_demo.cpp  ising_demo.cpp  lorenz.cpp
include/: numerics.hpp
include/analysis/: analysis.hpp  quadrature.hpp  roots.hpp  types.hpp
include/core/: matrix.hpp  policy.hpp  small_matrix.hpp  types.hpp  vector.hpp
include/fields/: fields.hpp  grid2d.hpp
include/kernel/: array.hpp  dense.hpp  kernel.hpp  policy.hpp  raw.hpp  reduce.hpp  subspace.hpp
include/ode/: implicit.hpp  ode.hpp
include/pde/: adi.hpp  diffusion.hpp  fields.hpp  pde.hpp  poisson.hpp  scalar_field_2d.hpp  stencil.hpp
include/plot/: plot.hpp
include/solve/: algorithms.hpp  problems.hpp  solve.hpp
include/spatial/: cell_list.hpp  cell_list_3d.hpp  connected_components.hpp  (+7 more)
output/: REPORT.html  REPORT.md  bench_results.json  build_info.json  test_results.json
report/: index.html
tests/: CMakeLists.txt  test_analysis.cpp  test_banded.cpp  test_eigen.cpp  test_factorization.cpp  test_fft.cpp  test_matrix.cpp  test_ode.cpp  test_solvers.cpp  test_svd.cpp  test_vector.cpp
(+104 files in other folders)
